[gd_scene load_steps=3 format=3 uid="uid://ai_config_panel_001"]

[ext_resource type="Script" path="res://scripts/ai_config_panel.gd" id="1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_template"]
resource_name = "TemplateGroup"

[node name="AIConfigPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -300.0
offset_right = 520.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "AI 配置"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "×"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="快速配置" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/快速配置"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "选择配置模板（仅限硅基流动，其他平台请使用详细配置）"
horizontal_alignment = 1

[node name="TemplateContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FreeButton" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer/TemplateContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_template")
text = "免费"

[node name="StandardButton" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer/TemplateContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_template")
text = "标准"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "性能优秀，价格合理。推荐使用。"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API密钥:"

[node name="KeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "应用配置"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="详细配置" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/详细配置"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="WarningLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "注意：由于协议不同，部分平台可能无法正常使用"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ChatModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "对话模型配置"
horizontal_alignment = 1

[node name="ChatModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="ChatModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "deepseek-ai/DeepSeek-V3.2-Exp"

[node name="ChatBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="ChatBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn/v1"

[node name="ChatKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="ChatKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SummaryModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "总结模型配置"
horizontal_alignment = 1

[node name="SummaryModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="SummaryModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Qwen/Qwen3-8B"

[node name="SummaryBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="SummaryBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn/v1"

[node name="SummaryKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="SummaryKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TTSModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "TTS模型配置"
horizontal_alignment = 1

[node name="TTSModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="TTSModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "FunAudioLLM/CosyVoice2-0.5B"

[node name="TTSBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="TTSBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn"

[node name="TTSKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="TTSKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="EmbeddingModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "嵌入模型配置"
horizontal_alignment = 1

[node name="EmbeddingModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="EmbeddingModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "BAAI/bge-m3"

[node name="EmbeddingBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="EmbeddingBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn/v1"

[node name="EmbeddingKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="EmbeddingKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DetailSaveButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "保存详细配置"

[node name="DetailStatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="语音设置" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/语音设置"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EnableContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer"]
layout_mode = 2
alignment = 3

[node name="EnableLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer/EnableContainer"]
layout_mode = 2
text = "启用语音合成"

[node name="EnableCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer/EnableContainer"]
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "音量"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer/VolumeContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="VolumeValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer"]
layout_mode = 2

[node name="ReuploadButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer"]
layout_mode = 2
text = "手动重新上传参考音频"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/语音设置/VBoxContainer"]
layout_mode = 2
text = "提示：TTS比较贵，不用的话建议关闭"
horizontal_alignment = 1
autowrap_mode = 3

[node name="日志导出" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/日志导出"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/日志导出/VBoxContainer"]
layout_mode = 2
text = "导出日志文件到 Documents/SnowFox_Logs/ 目录
包含：AI日志、Godot日志、存档信息、日记"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/日志导出/VBoxContainer"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/日志导出/VBoxContainer"]
layout_mode = 2
text = "导出日志"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/日志导出/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/日志导出/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/日志导出/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -2
theme_override_font_sizes/font_size = 20
text = "提示：
• 手机端可在文件管理器的Documents目录找到导出的文件
• 可将日志压缩后分享给开发者用于问题诊断
• 日志包含对话内容，请注意隐私保护"
autowrap_mode = 3

[node name="修复记忆" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "修复向量数据损坏问题"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "检查向量数据"

[node name="CheckStatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RepairButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "开始修复"

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2
max_value = 100.0

[node name="LogScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LogLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer/LogScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
autowrap_mode = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/修复记忆/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "提示：修复会重新调用API生成向量"
horizontal_alignment = 1
autowrap_mode = 3
